# aitrios-edge-device-manager

./: .gitignore  CODEOWNERS  PrivacyPolicy.md  README.md  SECURITY.md  meson.build
configs/: meson.build
configs/raspi/: meson.build
src/: meson.build
src/esf/: meson.build
src/esf/button_manager/src/: button_manager.c  button_manager_internal.c  button_manager_internal.h  button_manager_linked_list.c  button_manager_linked_list.h  meson.build
src/esf/clock_manager/: meson.build
src/esf/clock_manager/include/: clock_manager.h  clock_manager_setting.h
src/esf/clock_manager/src/: clock_manager.c  clock_manager_internal.c  clock_manager_internal.h  clock_manager_monitor.c  clock_manager_monitor.h  clock_manager_notification.c  clock_manager_notification.h  clock_manager_setting.c  clock_manager_setting_internal.h  clock_manager_utility.c  clock_manager_utility.h  meson.build
src/esf/clock_manager/src_t4/: clock_manager.c  clock_manager_internal.c  clock_manager_monitor.c  clock_manager_monitor.h  clock_manager_notification.c  clock_manager_notification.h  clock_manager_setting.c  clock_manager_setting_internal.h  clock_manager_utility.h  meson.build
src/esf/codec/: meson.build
src/esf/codec/base64/: meson.build
src/esf/codec/jpeg/: meson.build
src/esf/codec/json/: meson.build
src/esf/firmware_manager/: README.md  meson.build
src/esf/firmware_manager/include/: firmware_manager.h
src/esf/firmware_manager/src/: meson.build
src/esf/led_manager/: meson.build
src/esf/led_manager/config/: config.h  led_table.h  stub.inc  t3s3_aitrios.inc  table_struct.h
src/esf/led_manager/include/: led_manager.h
src/esf/led_manager/src/: led_manager.c  meson.build
src/esf/log_manager/include/: log_manager.h
src/esf/log_manager/src/: dummy_utility_msg.c  dummy_utility_msg.h  log_manager.c  log_manager_internal.c  log_manager_internal.h  log_manager_list.c  log_manager_list.h  log_manager_metrics.c  log_manager_metrics.h  log_manager_setting.c  log_manager_setting.h  meson.build
src/esf/main/: README_ja.md  meson.build
src/esf/main/include/: main.h
src/esf/main/src/: launcher.c  main.c  main_internal.h  main_log.h  main_migration.c  main_migration.h  meson.build
src/esf/memory_manager/include/: memory_manager.h
src/esf/memory_manager/src/: memory_manager.c  memory_manager_internal.h  meson.build
src/esf/network_manager/: meson.build
src/esf/network_manager/include/: network_manager.h
src/esf/network_manager/src/: meson.build  network_manager.c  network_manager_accessor.c  network_manager_accessor_parameter_storage_manager.c  network_manager_migration.c  network_manager_resource.c
src/esf/parameter_storage_manager/include/: parameter_storage_manager.h  parameter_storage_manager_common.h
src/esf/parameter_storage_manager/src/: meson.build  parameter_storage_manager_buffer.c  parameter_storage_manager_buffer.h  parameter_storage_manager_config.h  parameter_storage_manager_event_log.h  parameter_storage_manager_ext.c  parameter_storage_manager_internal_work.c  parameter_storage_manager_internal_work.h  parameter_storage_manager_log.h  parameter_storage_manager_logger.h  parameter_storage_manager_mutex.c  parameter_storage_manager_mutex.h  parameter_storage_manager_resource.c  parameter_storage_manager_resource.h  parameter_storage_manager_storage_adapter.c  parameter_storage_manager_storage_adapter.h  parameter_storage_manager_storage_adapter_item_type.c  parameter_storage_manager_storage_adapter_item_type.h  parameter_storage_manager_storage_adapter_other.c  parameter_storage_manager_storage_adapter_other.h  parameter_storage_manager_storage_adapter_pl.c  parameter_storage_manager_storage_adapter_pl.h  parameter_storage_manager_storage_adapter_settings.c  parameter_storage_manager_storage_adapter_settings.h  parameter_storage_manager_storage_adapter_settings_table.h  parameter_storage_manager_utility.c  parameter_storage_manager_utility.h
src/esf/power_manager/include/: power_manager.h
src/esf/power_manager/src/: meson.build  power_manager.c
src/esf/system_manager/include/: system_manager.h
src/esf/system_manager/src/: meson.build  system_manager.c  system_manager_accessor_device_manifest.c  system_manager_accessor_device_manifest.h  system_manager_accessor_enrollment.c  system_manager_accessor_enrollment.h  system_manager_accessor_evp.c  system_manager_accessor_evp.h  system_manager_accessor_exception_info.c  system_manager_accessor_exception_info.h  system_manager_accessor_hwinfo.c  system_manager_accessor_hwinfo.h  system_manager_accessor_initial_setting_flag.c  system_manager_accessor_initial_setting_flag.h  system_manager_accessor_migration_data.c  system_manager_accessor_migration_data.h  system_manager_accessor_qr_mode_timeout_value.c  system_manager_accessor_qr_mode_timeout_value.h  system_manager_accessor_reset_cause.c  system_manager_accessor_reset_cause.h  system_manager_accessor_root_auth.c  system_manager_accessor_root_auth.h
src/hal/: meson.build
src/hal/include/: hal.h  hal_driver.h  hal_i2c.h  hal_ioexp.h
src/hal/src/: meson.build
src/hal/src/common/: meson.build
src/hal/src/driver/: meson.build
src/hal/src/i2c/: hal_i2c.c  hal_i2c_impl.h
src/hal/src/ioexp/: hal_ioexp.c  hal_ioexp_impl.h
src/hal/src/linux/: meson.build
src/porting_layer/: meson.build
src/porting_layer/include/: firmware_manager_porting_layer.h  pl.h  pl_appmem.h  pl_button.h  pl_clock_manager.h  pl_dmamem.h  pl_led.h  pl_lheap.h  pl_log_manager.h  pl_main.h  pl_network.h  pl_power_manager.h  pl_storage.h  pl_system_control.h  pl_system_manager.h  pl_usb_port_controller.h  pl_wdt.h
src/porting_layer/src/: meson.build
src/porting_layer/src/button_manager/: pl_button.c  pl_button_impl.h
src/rpi/: meson.build
src/rpi/porting_layer/: meson.build
src/utility/: meson.build
src/utility/log/: meson.build
src/utility/msg/: .gitignore  meson.build
src/wasm_binding/: .gitignore  meson.build
src/wasm_binding/codec/: meson.build
src/wasm_binding/common/: meson.build  wasm_binding_log.h
src/wasm_binding/include/: wasm_binding.h
(+447 files in other folders)
