# SPDX-FileCopyrightText: 2024-2025 Sony Semiconductor Solutions Corporation
#
# SPDX-License-Identifier: Apache-2.0

esf_includes_public = []
esf_sources = files([])

subdir('button_manager')
subdir('clock_manager')
subdir('codec')
subdir('firmware_manager')
subdir('led_manager')
subdir('log_manager')
subdir('main')
subdir('memory_manager')
subdir('network_manager')
subdir('parameter_storage_manager')
subdir('power_manager')
subdir('system_manager')
