# SPDX-FileCopyrightText: 2024-2025 Sony Semiconductor Solutions Corporation
#
# SPDX-License-Identifier: Apache-2.0

esf_fw_mgr_sources = []
esf_fw_mgr_includes_internal = []
esf_fw_mgr_includes_public = []

esf_fw_mgr_includes_public += include_directories('include')

subdir('src')

esf_includes_public += esf_fw_mgr_includes_public
esf_includes_internal += esf_fw_mgr_includes_internal
esf_sources += esf_fw_mgr_sources
