# SPDX-FileCopyrightText: 2024-2025 Sony Semiconductor Solutions Corporation
#
# SPDX-License-Identifier: Apache-2.0

esf_sources += files([
	'clock_manager_setting_internal.h',
	'clock_manager_setting.c',
	'clock_manager_utility.c',
	'clock_manager_utility.h',
	'clock_manager.c'
])

subdir('stub')
