# SPDX-FileCopyrightText: 2024-2025 Sony Semiconductor Solutions Corporation
#
# SPDX-License-Identifier: Apache-2.0

esf_sources += files([
	'system_manager_accessor_device_manifest.c',
	'system_manager_accessor_device_manifest.h',
	'system_manager_accessor_enrollment.c',
	'system_manager_accessor_enrollment.h',
	'system_manager_accessor_evp.c',
	'system_manager_accessor_evp.h',
	'system_manager_accessor_exception_info.c',
	'system_manager_accessor_exception_info.h',
	'system_manager_accessor_hwinfo.c',
	'system_manager_accessor_hwinfo.h',
	'system_manager_accessor_initial_setting_flag.c',
	'system_manager_accessor_initial_setting_flag.h',
	'system_manager_accessor_qr_mode_timeout_value.c',
	'system_manager_accessor_qr_mode_timeout_value.h',
	'system_manager_accessor_reset_cause.c',
	'system_manager_accessor_reset_cause.h',
	'system_manager_accessor_root_auth.c',
	'system_manager_accessor_root_auth.h',
	'system_manager_accessor_migration_data.c',
	'system_manager_accessor_migration_data.h',
	'system_manager.c',
])
