# SPDX-FileCopyrightText: 2024-2025 Sony Semiconductor Solutions Corporation
#
# SPDX-License-Identifier: Apache-2.0

esf_sources += files([
	'jpeg_export_api.c',
	'jpeg_export_internal.c',
	'jpeg_export_internal.h',
	'jpeg_fileio_internal.c',
	'jpeg_fileio_internal.h',
	'jpeg_map_internal.c',
	'jpeg_map_internal.h',
])
